--- a/client/index.html
+++ b/client/index.html
@@ -25,10 +25,15 @@
     	<div ui-view></div>
 
         <nav class="navbar is-fixed-bottom" id="bot">
-            <div class="navbar-end">
+            <div class="navbar-end is-hidden-mobile"">
                 <a href="https://github.com/Mholliday6611"><img class="logos" src="client/images/git.png" style="height: 50px; margin-right: 50px;"></a>
                 <a href="https://www.linkedin.com/in/malcolm-holliday/"><img class="logos" src="client/images/link.png" style="height: 50px; margin-right: 50px;"></a>
                 <a href="mailto:Mholliday6611@gmail.com"><img class="logos" src="client/images/mail.png" style="height: 50px;margin-right: 50px;"></a>
+            </div>
+            <div class="navbar-end is-hidden-tablet"">
+                <a href="https://github.com/Mholliday6611"><img class="logos" src="client/images/git.png" style="height: 30px; margin-right: 50px;"></a>
+                <a href="https://www.linkedin.com/in/malcolm-holliday/"><img class="logos" src="client/images/link.png" style="height: 30px; margin-right: 50px;"></a>
+                <a href="mailto:Mholliday6611@gmail.com"><img class="logos" src="client/images/mail.png" style="height: 50px;margin-right: 30px;"></a>
             </div>
         </nav>
         
